# TempRepo

./: .gitignore  README.md  client  client.vala  com.asiet.lab.GitLink.flatpak  com.asiet.lab.GitLink.json  meson.build  server  server.vala  volume
data/: com.asiet.lab.GitLink.desktop.in  com.asiet.lab.GitLink.gschema.xml  com.asiet.lab.GitLink.metainfo.xml.in  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: application.vala  gitlink.gresource.xml  main.vala  meson.build  style.css  volume.vala
src/gtk/: accounts_page.blp  authentication_page.blp  display_card.blp  invigilator_page.blp  login_window.blp  preferences_dialog.blp  repo_clone_dialog.blp  repos_row.blp  setup_page.blp  ssh_config_page.blp  ssh_create_page.blp  user_config_page.blp  user_page.blp  value_validator.blp  window.blp
src/vala-git/: Git.vala  GitClient.vala  GitRepo.vala  GitUser.vala
src/vala-helper/: AccountsListModel.vala  Bell.vala  Connection.vala  JsonEngine.vala  ListModels.vala  ReposListModel.vala  SSHConfigurations.vala
src/vala-ui/: AccountsPage.vala  DisplayCard.vala  InvigilatorPage.vala  PreferencesDialog.vala  RepoCloneDialog.vala  SetupPage.vala  UserPage.vala  ValueValidator.vala  window.vala
src/vala-ui/login/: AuthenticationPage.vala  LoginWindow.vala  SSHConfigPage.vala  SSHCreatePage.vala  UserConfigPage.vala
